# Matrix-multiplications

./: CMakeLists.txt  GPUdebug.hpp  MM3.cu  README.md  SPMM1.cu  correctness.cu  correctnessTest.py
DMM/: CMakeLists.txt
DMM/src/: MM1.cu  MM11.cu  MM13.cu  MM3.cu  MM4.cu  MM5.cu  MM6.cu  MM7.cu  MM8.cu  MM9.cu
DMM/src/tests/: correctness.cu  correctnessGPU.cu  errorGPU.cu  get.cu  performance.cu
include/: GPUdebug.hpp  common.hpp  matConst.hpp
src/dmm/: MM1.cu  MM10.cu  MM11.cu  MM12.cu  MM2.cu  MM3.cu  MM4.cu  MM5.cu  MM6.cu  MM7.cu  MM8.cu  MM9.cu
src/spmm/: SPMM1.cu
src/tests/: correctness.cu  correctnessGPU.cu  get.cu  performance.cu
